[gd_scene load_steps=7 format=3 uid="uid://dt1fv4d8312m"]

[ext_resource type="PackedScene" uid="uid://is1vx37t83ck" path="res://Scenes/Interactables/Chargers/charger.tscn" id="1_21iew"]
[ext_resource type="Script" path="res://Scenes/Interactables/Table/table.gd" id="1_fhl43"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nnr1h"]
height = 0.2

[sub_resource type="CylinderMesh" id="CylinderMesh_t2vkk"]
height = 0.2

[sub_resource type="ViewportTexture" id="ViewportTexture_7df7l"]
viewport_path = NodePath("Sprite3D/SubViewport")

[sub_resource type="LabelSettings" id="LabelSettings_dp40n"]
font_size = 36

[node name="Table" type="Node3D"]
script = ExtResource("1_fhl43")

[node name="TableBody" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="TableBody"]
shape = SubResource("CylinderShape3D_nnr1h")

[node name="MeshInstance3D" type="MeshInstance3D" parent="TableBody"]
mesh = SubResource("CylinderMesh_t2vkk")

[node name="ChargerLocations" type="Node3D" parent="."]

[node name="ChargerSeat" parent="ChargerLocations" instance=ExtResource("1_21iew")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="ChargerSeat2" parent="ChargerLocations" instance=ExtResource("1_21iew")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="ChargerSeat3" parent="ChargerLocations" instance=ExtResource("1_21iew")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="ChargerSeat4" parent="ChargerLocations" instance=ExtResource("1_21iew")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="."]
radius = 1.0

[node name="PowerCycle" type="Timer" parent="."]
autostart = true

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
billboard = 2
texture = SubResource("ViewportTexture_7df7l")

[node name="SubViewport" type="SubViewport" parent="Sprite3D"]
transparent_bg = true
size = Vector2i(512, 256)

[node name="HUD" type="Control" parent="Sprite3D/SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite3D/SubViewport/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.5
offset_top = -90.0
offset_right = 71.5
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2

[node name="VoltageTypeLabel" type="Label" parent="Sprite3D/SubViewport/HUD/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TEST
"
label_settings = SubResource("LabelSettings_dp40n")
horizontal_alignment = 1

[node name="CapacityLabel" type="Label" parent="Sprite3D/SubViewport/HUD/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TEST
"
label_settings = SubResource("LabelSettings_dp40n")
horizontal_alignment = 1

[node name="LoadLabel" type="Label" parent="Sprite3D/SubViewport/HUD/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TEST
"
label_settings = SubResource("LabelSettings_dp40n")
horizontal_alignment = 1

[connection signal="timeout" from="PowerCycle" to="." method="_on_power_cycle_timeout"]
